# flfair_idlf24

./: .gitignore  README.md  compass_run.ipynb  flwr.ipynb  flwr_compass.ipynb  requirements.txt
advanced-pytorch/outputs/2024-10-27/11-37-54/: model_state_acc_0.0996_round_0.pth  model_state_acc_0.1708_round_2.pth  model_state_acc_0.1_round_1.pth  model_state_acc_0.3569_round_3.pth  model_state_acc_0.5024_round_4.pth  model_state_acc_0.5628_round_5.pth  model_state_acc_0.6534_round_6.pth  model_state_acc_0.7057_round_8.pth  model_state_acc_0.7196_round_10.pth  results.json  run_config.json
advanced-pytorch/pytorch_example/: server_app.py  strategy.py
advanced-pytorch/wandb/: latest-run
advanced-pytorch/wandb/run-20241027_113755-vqsyklvl/: run-vqsyklvl.wandb
advanced-pytorch/wandb/run-20241027_113755-vqsyklvl/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
basic-fairfed/: pyproject.toml
basic-fairfed/basic_fairfed/: __init__.py  server_app.py
custom_flwr/: FairFed.py  client_app.py  fedavg_strategy.py  idl24_FairFed.py  server_app.py  strategy.py  task.py
strategy_docs/: explained.md
toy/: compass_run.ipynb  flower_tutorial.ipynb  flwr_compass.ipynb  project_pseudocode.py
toy/advanced-pytorch/: README.md
toy/advanced-pytorch/pytorch_example/: client_app.py  task.py
toy/basic-fairfed/: README.md
toy/basic-fairfed/basic_fairfed/: client_app.py  task.py
toy/strategy_docs/: explained.md
